--- a/trabajo-clase/index.html
+++ b/trabajo-clase/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
     <main class="mt-2 d-flex align-items-center">
-        <div class="d-flex col-4 col-lg-4">
+        <!-- <div class="d-flex col-4 col-lg-4">
             <div class="accordion col-12" id="accordionExample">
                 <div class="accordion-item ">
                     <h2 class="accordion-header">
@@ -116,7 +116,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+        <button type="button" onclick="crearBoton()">Presiona el boton</button>
 
     </main>
     <footer class="container-fluid bg-dark text-light py-4 mt-auto">
@@ -139,6 +140,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
