--- a/JS/index.html
+++ b/JS/index.html
@@ -11,9 +11,11 @@
     <h1>Trabajo de JS</h1>
     <form>
         <label for="fname">Nombre:</label><br>
-        <input type="text" id="nombre" ><br>
+        <input type="text" id="nombre"><br>
         <label for="lname">Apellido:</label><br>
-        <input type="text" id="apellido" >
+        <input type="text" id="apellido">
+        <label for="edad">Edad:</label><br>
+        <input type="number" id="edad">
         <button type="button" onclick="crearTexto()">Enviar</button>
     </form>
     <script src="script.js"></script>
